--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
+@use "tailwindcss";
+
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
