--- a/src/app/features/persons/person-list/person-list.component.html
+++ b/src/app/features/persons/person-list/person-list.component.html
@@ -7,7 +7,7 @@
       </p>
     </div>
     <div class="mt-4 sm:mt-0">
-      <button mat-raised-button color="primary" routerLink="/persons/new">
+      <button  mat-flat-button color="primary" routerLink="/persons/new">
         <mat-icon>add</mat-icon>
         Nueva Persona
       </button>
@@ -17,46 +17,36 @@
   <app-error-alert [message]="errorMessage()" (dismissed)="errorMessage.set('')" />
 
   <!-- Filters -->
-  <mat-card class="mb-6">
     <mat-card-content>
       <form [formGroup]="filterForm">
-        <div class="grid grid-cols-1 gap-4 sm:grid-cols-3 mb-4">
+        <div class="flex gap-4">
           <mat-form-field appearance="outline" class="w-full">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email" placeholder="Buscar por email...">
-            <mat-icon matPrefix>email</mat-icon>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="w-full">
-            <mat-label>Apellido</mat-label>
-            <input matInput formControlName="last_name" placeholder="Buscar por apellido...">
-            <mat-icon matPrefix>person</mat-icon>
+            <mat-label>Buscar</mat-label>
+            <input matInput formControlName="search" placeholder="Buscar por nombre, apellido o email...">
+            <mat-icon matPrefix>search</mat-icon>
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="w-full">
             <mat-label>Ordenar por fecha</mat-label>
             <mat-select formControlName="ordering">
-              <mat-option value="">Sin orden</mat-option>
               <mat-option value="created_at">Fecha ascendente</mat-option>
               <mat-option value="-created_at">Fecha descendente</mat-option>
             </mat-select>
             <mat-icon matPrefix>sort</mat-icon>
           </mat-form-field>
-        </div>
 
-        <div class="flex gap-3">
-          <button mat-raised-button color="primary" type="button" (click)="applyFilters()">
-            <mat-icon>search</mat-icon>
-            Buscar
-          </button>
-          <button mat-stroked-button type="button" (click)="clearFilters()">
-            <mat-icon>clear</mat-icon>
-            Limpiar
-          </button>
+          <div class="flex gap-3">
+            <button mat-icon-button color="primary" type="button" (click)="applyFilters()">
+              <mat-icon>search</mat-icon>
+
+            </button>
+            <button mat-icon-button type="button" (click)="clearFilters()">
+              <mat-icon>clear</mat-icon>
+            </button>
+          </div>
         </div>
       </form>
     </mat-card-content>
-  </mat-card>
 
   @if (loading()) {
     <app-loading-spinner message="Cargando personas..." />
@@ -133,4 +123,3 @@
     </mat-card>
   }
 </div>
-
