refactor: Minor updates

--- a/src/app/features/products/product-form/product-form.component.html
+++ b/src/app/features/products/product-form/product-form.component.html
@@ -80,7 +80,7 @@
               </mat-select>
             </mat-form-field>
 
-            <!-- Form Actions -->
+            <!-- Actions -->
             <div class="flex items-center justify-end gap-3 pt-4">
               <button mat-stroked-button type="button" routerLink="/products">
                 Cancelar
